--- a/css/toper.css
+++ b/css/toper.css
@@ -67,6 +67,11 @@
 				border-radius: 50px 0 0 50px;
 				box-shadow: 0.3em 0.3em 9px rgba(122,122,122,0.5);
 				text-indent: 30px;
+				border: 0;
+			}
+			
+			.userInput: hover{
+				width: 500px;
 			}
 			
 			.button{
